# LayTracer

./: .gitignore  .zenodo.json  CHANGELOG.md  LICENSE  README.md  RELEASE.md  build-docs.bat  build-docs.sh  environment.yml  install.bat  install.sh  pyproject.toml  pytest.ini
.github/workflows/: docs.yml  pytest.yml  release-on-published.yml  release.yml
docs/: Makefile  build_latex_log4.txt  make.bat
docs/source/: conf.py  getting_started.rst  index.rst  methodology.rst  references.bib  theory.rst
docs/source/_static/css/: custom.css
docs/source/api/: index.rst
examples/: 01_basic_raytracing.py  02_amplitude_analysis.py  02_paper_examples.py  03_paper_examples.py  03_reflection_transmission.py  04_amplitude_analysis.py  05_homogeneous_equivalence.py  README.txt
laytracer/: __init__.py  amplitude.py  api.py  model.py  plot.py  solver.py
pytests/: test_amplitude.py  test_api.py  test_generalized.py  test_homogeneous_equivalence.py  test_solver.py  test_symmetry.py
