[build-system]
requires = [
    "setuptools >= 65",
    "setuptools_scm[toml]",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "laytracer"
description = "LayTracer — a Python implementation of two-point seismic ray tracing in layered media"
readme = "README.md"
requires-python = ">=3.8,<3.13"
license = { file = "LICENSE" }
authors = [    
    {name = "Denis Anikiev", email = "danikiev@gmail.com"},
]
keywords = ["geophysics", "seismology", "ray tracing", "layered media"]
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "plotly",
    "cmcrameri",
    "psutil",
    "joblib"
]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-gallery",
    "sphinxcontrib-bibtex",
    "sphinx-design",
    "numpydoc",
]

[tool.setuptools.packages.find]
exclude = ["pytests", "tests"]

[tool.setuptools_scm]
version_file = "laytracer/version.py"
